--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ body {
   background-color: #222;
   border: 1px solid #444;
 }
+body {
+  background-color: #000;
+  color: #fff;
+}
 
 .message.user {
   background-color: #1a1a1a;
